--- a/application-gateway/package.json
+++ b/application-gateway/package.json
@@ -18,7 +18,9 @@
     "@grpc/grpc-js": "^1.12.2",
     "@hyperledger/fabric-gateway": "^1.8.0",
     "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
